--- a/index.html
+++ b/index.html
@@ -800,32 +800,18 @@
 </blockquote>
 <pre><code class="language-javascript">Status 200 OK:
 {
-    neerslag: {
-        13: 30: &quot;0.10&quot;,
-        13: 35: &quot;0.10&quot;,
-        13: 40: &quot;0.30&quot;,
-        13: 45: &quot;0.30&quot;,
-        13: 50: &quot;0.20&quot;,
-        13: 55: &quot;0.00&quot;,
-        14: 00: &quot;0.00&quot;,
-        14: 05: &quot;0.00&quot;,
-        14: 10: &quot;0.00&quot;,
-        14: 15: &quot;0.00&quot;,
-        14: 20: &quot;0.00&quot;,
-        14: 25: &quot;0.00&quot;
-    },
-    address: {
-        house_number: &quot;81&quot;,
-        road: &quot;Zuidende&quot;,
-        neighbourhood: &quot;Binnenstad&quot;,
-        suburb: &quot;Helmond&quot;,
-        town: &quot;Helmond&quot;,
-        state: &quot;North Brabant&quot;,
-        postcode: &quot;5701KX&quot;,
-        country: &quot;The Netherlands&quot;,
-        country_code: &quot;nl&quot;,
-        city: &quot;Helmond&quot;
-    }
+    14: 15: &quot;0.00&quot;,
+    14: 20: &quot;0.00&quot;,
+    14: 25: &quot;0.00&quot;,
+    14: 30: &quot;0.00&quot;,
+    14: 35: &quot;0.00&quot;,
+    14: 40: &quot;0.00&quot;,
+    14: 45: &quot;0.00&quot;,
+    14: 50: &quot;0.00&quot;,
+    14: 55: &quot;0.00&quot;,
+    15: 00: &quot;0.00&quot;,
+    15: 05: &quot;0.00&quot;,
+    15: 10: &quot;0.00&quot;
 }</code></pre>
 <h2 id="location">location</h2>
 <table>
@@ -875,5 +861,5 @@
 <p>.../api/weer/location/51.48&amp;5.66</p>
 </blockquote>
 <pre><code class="language-javascript">Status 200 OK:
-&quot;Ospel&quot;</code></pre>
+&quot;Helmond&quot;</code></pre>
 </body></html>
